# rusty_libc

./: ARCHITECTURE.md  Cargo.toml  DESIGN.md  LICENSE-MIT  README.md  RELEASE_NOTES.md  REVIEW.md  SECURITY.md  gap-analysis.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
bench/: Cargo.toml  README.md  run.sh
bench/src/: main.rs
docs/adr/: 0002-signalfd-as-primary-event-driven-signal-path.md  0003-add-sockets-tcp-udp-and-dns-resolution.md  0003-sockets-out-of-scope-until-a-consumer-need-exists.md  0004-ptrace-scope-and-shape.md
src/: dns.rs  epoll.rs  eventfd.rs  fd.rs  fs.rs  inotify.rs  lib.rs  mmap.rs  process.rs  ptrace.rs  rand.rs  rlimit.rs  signal.rs  socket.rs  sysinfo.rs  termios.rs  time.rs  tty.rs  umask.rs  vdso.rs  wait.rs
src/arch/: aarch64.rs  mod.rs  x86_64.rs
