[package]
name = "rusty_libc"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "no_std, zero-dependency, Linux-only raw-syscall replacement for the libc crate, built for rush."
repository = "https://github.com/baileyrd/rusty_libc"
readme = "README.md"
categories = ["no-std", "os::linux-apis"]
keywords = ["syscall", "linux", "no-std", "libc"]

# No dependencies: this crate exists precisely to avoid the `libc` FFI crate.
[dependencies]

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
