# Standalone benchmark comparing rusty_libc against the `libc` crate.
#
# This is deliberately its OWN workspace (the `[workspace]` table below) and
# lives outside the library's build: it is not a workspace member of the parent
# crate, and running `cargo build`/`test` at the repo root never touches it. So
# the library keeps its zero-dependency guarantee — `libc` only ever appears
# here, for the comparison.
[package]
name = "rusty_libc-vs-libc"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
rusty_libc = { path = ".." }
libc = "0.2"

# Optimize like a real build so the numbers reflect released code.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
